<resources>
    <string name="app_name">Worlds</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="motto">The worlds of English in your phone!</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="app_info">App: Worlds 2.7.1\nDeveloper: Prudnikoff\nEmail: prudnikoff.dev@gmail.com</string>
    <string name="search_hint">Search</string>
    <string name="examples">Examples:</string>
    <string name="enter_a_category_name">Enter a category name:</string>
    <string name="wordsCards">wordsCards</string>
    <string name="memorized">memorized</string>
    <string name="dialog_example">examples</string>
    <string name="dialog_headword">headword</string>
    <string name="dialog_part_of_speech">part of speech</string>
    <string name="dialog_definition">definition</string>
    <string name="restore">Restore</string>
    <string name="back_up">Back up</string>
    <string name="enter_name_of_file">Enter a file name:</string>
    <string name="back_up_default_name">WorldsAppBackUp</string>
    <string name="ads"><a href="https://vk.com/englishdiscovery">Awesome community for learners</a></string>
    <string name="ads_dialog">Do you want to discover English more?</string>
    <string name="synonyms">Synonyms:</string>
    <string name="dialog_synonyms">synonyms</string>
</resources>
