<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_white"
            android:title="@string/about" />
        <item
            android:id="@+id/back_up_data"
            android:icon="@drawable/ic_arrow_downward"
            android:title="@string/back_up" />
        <item
            android:id="@+id/restore_data"
            android:icon="@drawable/ic_arrow_upward"
            android:title="@string/restore" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"
                android:actionProviderClass=
                    "android.widget.ShareActionProvider"/>
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/report" />
        </menu>
    </item>

</menu>
